--- a/BusinessCard/style.css
+++ b/BusinessCard/style.css
@@ -28,6 +28,7 @@ html {
     background-color: palevioletred;
     border: 0.2em solid blue;
     border-radius: 1.5em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 /*Styles specific to header and footer*/
 
@@ -53,6 +54,10 @@ footer p{
     
 }
 
+#secondFooter{
+    font-style: italic;
+}
+
 /*Styles specific to main business card contents*/
 
 .card article img {
@@ -68,16 +73,25 @@ h2, p {
 article {
     height: 12em;
     background-image: linear-gradient(to bottom,rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+    
 }
 
 #secondInfo{
-    font: Times;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: black;
+    font-size: 1.2em;
+    padding: 1.5em;
 }
+
 
 h2{
     font-size: 2em;
     height: 2em;
+}
+
+#secondHeader{
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 100;
 }
 
 p{
