--- a/animation.css
+++ b/animation.css
@@ -66,3 +66,10 @@ p{
     background-color: rgb(0, 0, 0);
     color:rgb(255, 4, 255);
 }
+
+
+
+/*if just doing a color chnage on hover: easier way*/
+#box1:hover {
+    background-color: blueviolet;
+}
