--- a/final/badForm.css
+++ b/final/badForm.css
@@ -1,6 +1,10 @@
 .out{
     background-color: rgb(175, 140, 207);
-    width: 100px;
+    width: 200px;
     height: 100px;
-    font-size: 40px;
+    font-size: 65px;
+}
+
+body{
+    background-color: aqua;
 }
